# cookiejar

./: .gitignore  README.md  meson.build
src/: browser.vala  cookie.vala  firefox.vala  firefox_profile.vala  import.vala  importer.vala  main.vala  profile.vala
tests/: cookie.vala  firefox.vala
tests/resources/: profiles.ini
